# kiwi-workbench

./: .env.example  .gitignore  README.md
.agent/rules/: kiwi_rules.md
.agent/workflows/: add_telegram_account.md  daily_ad_spend_reconciliation.md  daily_payment_insight.md  kiwi_self_check.md  (+6 more)
engine/: main.py  pyproject.toml
engine/clients/: base_client.py  gemini.py  google_drive.py  google_sheet.py  openai_client.py  telegram.py
engine/connectors/: base.py  factory.py  gsheet.py  sql.py
engine/drivers/: admin_panel.py  base_driver.py
engine/scripts/: test_context.py
engine/scripts/config/: agent_config_manager.py
engine/scripts/core/: base_script.py
engine/scripts/domain/finance/accounting/weekly_report/: base_source.py  job.py  mena_processor.py
engine/scripts/domain/finance/accounting/weekly_report/sources/: __init__.py  jeetup.py  larkup.py
engine/scripts/domain/finance/accounting/weekly_report/sources/mena/: falcowin_ae.py  kanzplay_sa.py  sakerwin_ae.py  sakerwin_sa.py
engine/scripts/domain/marketing/acquisition/: agency_reconciliation.py
engine/scripts/domain/risk/payment/: payment_insight.py
engine/scripts/setup/: google_auth.py
engine/scripts/system/: asset_manager.py  audit_logger.py  generic_reporter.py  knowledge_syncer.py  scheduler.py
engine/scripts/tools/: telegram_auth.py  verify_admin_login.py  verify_telegram.py
engine/scripts/utils/: context_loader.py  notifier.py  output_manager.py  paths.py  remote_db.py
engine/templates/: script.py.jinja2
knowledge/: scheduler.yaml  script_library.yaml
scripts/: setup.sh
(+40 files in other folders)
